[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt",
    "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"


[project]
name = "swankit"
version = "0.1.8"
dynamic = ["readme", "dependencies"]
description = "Base toolkit for SwanLab"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Cunyue", email = "team@swanhub.co" },
]

[project.urls]
"Homepage" = "https://swanlab.cn"
"Source" = "https://github.com/SwanHubX/SwanLab-Toolkit"
"Bug Reports" = "https://github.com/SwanHubX/SwanLab-Toolkit/issues"

[tool.hatch.metadata.hooks.requirements_txt]
filename = "requirements.txt"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]


[tool.hatch.build]
artifacts = [
    "*.pyi",
]


[tool.hatch.build.targets.sdist]
include = [
    "/swankit",
    "/requirements.txt",
    "/requirements-dev.txt", # 用于测试的依赖
    "/test", # 包含一些测试脚本，确保测试成功
    "/README.md", # 包含readme，因为是动态设置的
]

[tool.hatch.build.targets.wheel]
packages = ["swankit"]

[tool.pyright]
include = ["swankit/**/*.py"]
exclude = []

[tool.ruff]
target-version = "py37"
extend-select = ["B", "C", "I", "N", "SIM", "UP"]
ignore = []

[tool.black]
line-length = 120
